contact functionality implemented

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </script>
 <script type="text/javascript">
    (function(){
-      emailjs.init("YOUR_PUBLIC_KEY");
+      emailjs.init("7xgpnCkTwM2_mVB-V");
    })();
 </script>
   </body>
